<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/ASIRFragment"
            android:icon="@drawable/asir_icon"
            android:title="@string/menu_asir" />
        <item
            android:id="@+id/DAMFragment"
            android:icon="@drawable/dam_icon"
            android:title="@string/menu_dam" />
        <item
            android:id="@+id/DAWFragment"
            android:icon="@drawable/daw_icon"
            android:title="@string/menu_daw" />
    </group>

    <item android:title="@string/menu_acerca_de">
        <menu>
            <item
                android:id="@+id/acercaFragment"
                android:icon="@drawable/users_icon"
                android:title="@string/menu_acerca_de"/>
        </menu>
    </item>
</menu>